--- a/style.css
+++ b/style.css
@@ -1,1 +1,36 @@
+p{
+  font-size: 12px; 
+  opacity: 0.5:
+}
 
+h1{
+  color: Azure;
+}
+.header{
+  background-color: light purple;
+  text-align: center;
+h1}
+font-size: 20px; 
+  opacity: 1:
+}
+body {
+  margin: 0;
+  padding: 0;
+}
+p}
+ont-weight: 400;
+  font-size: 14px;
+}
+h1}
+font-size: 20px; 
+  opacity: 1
+}
+body}
+text-decoration: none;
+  text-transform: uppercase;
+}
+
+header}
+font-size: 50px;
+    padding: 0 40px;
+}
